feat: support method routing for index docs(usage-guide): described method routing

--- a/website/src/components/demo/browser-content/browser-content.styles.scss
+++ b/website/src/components/demo/browser-content/browser-content.styles.scss
@@ -52,3 +52,14 @@ $element-color: #C0C0C0;
     background-color: $element-color;
   }
 }
+
+.favourites-page {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  &__item {
+    flex-grow: 1;
+    background-color: $element-color;
+  }
+}
